src/blocks/block-column-inner/styles/style.scss
/**
 * Layout column styles
 * Loads on front end and back end
 */

.wp-block-atomic-blocks-ab-layout {
	margin-bottom: 1.5em;
}

.ab-layout-column-wrap {
	display: grid;
    grid-template-rows: 1fr;
    grid-gap: 0 2em;
}

[data-type="atomic-blocks/ab-column"],
.ab-block-layout-column {
	display: block;
	vertical-align: top;
	min-width: 0;

	@media only screen and (max-width: 600px) {
		margin-bottom: 1em;
	}
}

.ab-block-layout-column {
	&.ab-is-vertically-aligned-top {
		align-self: flex-start;
	}

	&.ab-is-vertically-aligned-center {
		align-self: center;
	}

	&.ab-is-vertically-aligned-bottom {
		align-self: flex-end;
	}
}

.wp-block-atomic-blocks-ab-layout.alignfull {
	padding: 0 2em;

	@media only screen and (max-width: 600px) {
		padding: 0 15px;
	}
}

.ab-block-layout-column {
	display: block;
	width: 100%;
}

.ab-columns-center .ab-layout-column-wrap {
	margin: 0 auto;
}

/* Grid gap classes */

.ab-block-layout-column-gap-0 {
	grid-gap: 0 0;
}

.ab-block-layout-column-gap-1 {
	grid-gap: 0 1em;
}

.ab-block-layout-column-gap-2 {
	grid-gap: 0 2em;
}

.ab-block-layout-column-gap-3 {
	grid-gap: 0 3em;
}

.ab-block-layout-column-gap-4 {
	grid-gap: 0 4em;
}

.ab-block-layout-column-gap-5 {
	grid-gap: 0 5em;
}

.ab-block-layout-column-gap-6 {
	grid-gap: 0 6em;
}

.ab-block-layout-column-gap-7 {
	grid-gap: 0 7em;
}

.ab-block-layout-column-gap-8 {
	grid-gap: 0 8em;
}

.ab-block-layout-column-gap-9 {
	grid-gap: 0 9em;
}

.ab-block-layout-column-gap-10 {
	grid-gap: 0 10em;
}

/* Grid column classes */

.ab-layout-columns-2 .ab-layout-column-wrap {
	grid-template-columns: 1fr 1fr;

	&.ab-is-responsive-column {
		@media only screen and (max-width: 600px) {
			grid-template-columns: 1fr;
		}
	}
}

.ab-2-col-wideleft .ab-layout-column-wrap {
	grid-template-columns: 2fr 1fr;
}

.ab-2-col-wideright .ab-layout-column-wrap {
	grid-template-columns: 1fr 2fr;
}

.ab-layout-columns-3 .ab-layout-column-wrap {
	grid-template-columns: 1fr 1fr 1fr;

	&.ab-is-responsive-column {
		@media only screen and (max-width: 600px) {
			grid-template-columns: 1fr;
		}
	}
}

.ab-3-col-widecenter .ab-layout-column-wrap {
	grid-template-columns: 1fr 2fr 1fr;

	&.ab-is-responsive-column {
		@media only screen and (max-width: 600px) {
			grid-template-columns: 1fr;
		}
	}
}

.ab-3-col-wideleft .ab-layout-column-wrap {
	grid-template-columns: 2fr 1fr 1fr;

	&.ab-is-responsive-column {
		@media only screen and (max-width: 600px) {
			grid-template-columns: 1fr;
		}
	}
}

.ab-3-col-wideright .ab-layout-column-wrap {
	grid-template-columns: 1fr 1fr 2fr;

	&.ab-is-responsive-column {
		@media only screen and (max-width: 600px) {
			grid-template-columns: 1fr;
		}
	}
}

.ab-layout-columns-4 .ab-layout-column-wrap {
	grid-template-columns: 1fr 1fr 1fr 1fr;

	&.ab-is-responsive-column {
		@media only screen and (max-width: 800px) {
			grid-template-columns: 1fr 1fr;

			.wp-block-atomic-blocks-ab-layout-column {
				margin-bottom: 1.5em;
			}
		}

		@media only screen and (max-width: 600px) {
			grid-template-columns: 1fr;
		}
	}
}

.ab-4-col-wideleft .ab-layout-column-wrap {
	grid-template-columns: 2fr 1fr 1fr 1fr;
}

.ab-4-col-wideright .ab-layout-column-wrap {
	grid-template-columns: 1fr 1fr 1fr 2fr;
}

.ab-layout-columns-4,
.ab-layout-columns-5,
.ab-layout-columns-6 {
	overflow-x: scroll;
}

.ab-layout-columns-5 .ab-layout-column-wrap {
	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;

	&.ab-is-responsive-column {
		@media only screen and (max-width: 800px) {
			grid-template-columns: 1fr 1fr;
		}

		@media only screen and (max-width: 600px) {
			grid-template-columns: 1fr;
		}
	}
}

.ab-layout-columns-6 .ab-layout-column-wrap {
	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;

	&.ab-is-responsive-column {
		@media only screen and (max-width: 800px) {
			grid-template-columns: 1fr 1fr;
		}

		@media only screen and (max-width: 600px) {
			grid-template-columns: 1fr;
		}
	}
}

/* Column selector CSS */

.ab-layout-selector-group {
	margin-top: 10px;
}

.ab-layout-selector {
	display: inline-block;
	margin: 0 5px;

	button.ab-layout-selector-button {
		padding: 15px;
		height: auto;
		border-radius: 5px;
		background: #fff;

		&:hover {
			background: #fff;
		}
	}

	button.components-button.is-button:last-child {
		border-radius: 5px;
	}
}

